# stem-player

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Core/: AppSettings.cpp  AppSettings.h  MidiLearnManager.cpp  MidiLearnManager.h  StemDetector.cpp  StemDetector.h  StemEngine.cpp  StemEngine.h  StemTrack.cpp  StemTrack.h
Source/UI/: IconButton.cpp  IconButton.h  LookAndFeel.cpp  LookAndFeel.h  MainScreen.cpp  MainScreen.h  SelectionScreen.cpp  SelectionScreen.h  SettingsScreen.cpp  SettingsScreen.h  StemTrackComponent.cpp  StemTrackComponent.h  WaveformDisplay.cpp  WaveformDisplay.h
